traces/bug_863.txt
examples++-mpi/MUMPS_FreeFem.cpp:2607: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-mpi/MUMPS_FreeFem.cpp:2607:1: initialization of callDoLoadInit
2605.   addingInitFunct FFinit(100,ffinit,"MUMPS_FreeFem");
2606.   
2607. > LOADFUNC(Load_Init);

examples++-mpi/MUMPS_FreeFem.cpp:2607:1: call to DoLoadInit
2605.   addingInitFunct FFinit(100,ffinit,"MUMPS_FreeFem");
2606.   
2607. > LOADFUNC(Load_Init);

examples++-mpi/MUMPS_FreeFem.cpp:2607:1: call to addInitFunct
  2605.   addingInitFunct FFinit(100,ffinit,"MUMPS_FreeFem");
  2606.   
  2607. > LOADFUNC(Load_Init);

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
